# swarmstar_frontend

./: .env  .gitignore  LICENSE  README.md  journal.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.next/: build-manifest.json  (+1 more)
backend/: main.py  notes.md  pyproject.toml  pytest.ini
backend/azure/: pyproject.toml  temp.txt
backend/azure/app/: authentication.py  serverless_example.py
backend/azure/database/: cosmosdb.py
backend/client/chat/: handle_user_message.py  set_current_chat.py
backend/client/swarm/: create_swarm.py  delete_swarm.py  update_swarm.py
backend/client/user/: update_user.py
backend/client/utils/: mongodb.py
backend/flask/: .env  app.py  notes.md  pyproject.toml  run.py
backend/flask/app/: auth.py  login.py  protected.py  router.py  routes.py  spawn.py
backend/flask/app/api/: __init__.py
backend/flask/app/auth/: login.py  signup.py
backend/flask/app/chat/: create_chat.py  create_conversation.py  receive_user_message.py  send_message.py
backend/flask/app/database_schemas/: swarm_chats.py  swarm_events.py  swarm_messages.py  swarms.py  users.py
backend/flask/app/spawn/: create_swarm.py  delete_swarm.py  get_swarm.py  set_swarm.py  spawn_swarm.py
backend/flask/app/swarm/: spawn_swarn.py
backend/flask/app/utils/: type_operations.py
backend/flask/database/: swarms.sqlite3  user_auth.sqlite3  user_info.sqlite3
backend/flask/database/schemas/: messages.py  swarm_chats.py  swarms.py  user_auth.py  user_info.py
backend/flask/database_schemas/: swarm_conversations.py  swarm_nodes.py  swarms.py  users.py
backend/flask/swarm/: idk.py  spawn_swarn.py
backend/flask/utils/: database.py  mongodb.py  security.py
backend/local/: .env  create_swarm_space.py  main.py  notes.md  pyproject.toml  run.py
backend/local/app/: __init__.py  swarm_operation_queue.py  websocket_manager.py
backend/local/app/api/: __init__.py  swarm_operation_queue.py
backend/local/database_schemas/: swarm_chats.py  swarm_messages.py  user_profiles.py
backend/local/swarmstar_api/: handle_user_response.py
backend/local/utils/: db_utils.py  mongodb.py
backend/scripts/data/: clear_db_expect_users.py  clear_swarm_interface_db.py
backend/server/: spawn_swarm.py  swarm_operation_queue.py  websocket_manager.py
backend/server/communication/: send_user_message.py
backend/src/server/: spawn_swarm.py  swarm_operation_queue.py  ui_updates.py  websocket_manager.py
backend/src/types/: __init__.py  chat.py  user.py  user_profile.py  user_swarm.py
backend/tests/: mock_swarm.py  send_mock_operation.py  test_client_api.py  test_simple_routes.py
backend/types/: swarm_chats.py  swarm_messages.py  swarms.py
(+384 files in other folders)
